# bert-score-api

./: .dockerignore  .editorconfig  .env_example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: doc.yaml  docker_push.yaml  lint.yaml  test.yaml
docker/: Dockerfile
docs/: explanation.md  index.md  reference.md  tutorials.md
docs/templates/: google-notypes.mustache  google.mustache  tutorial.md
explanation/: index.html
how-to-guides/: index.html
notebooks/: playground.ipynb
reference/: index.html
search/: search_index.json
src/bert_score_api/: __init__.py  __main__.py  app.py  client.py  deps.py  main.py  schemes.py  settings.py  utils.py
src/bert_score_api/routers/: model.py  score_calculation.py
src/python_template/: __init__.py  placeholder.py
src/python_template/scripts/: __init__.py  placeholder.py
tests/: .env.test  conftest.py  test_bert_score.py  test_general.py  test_placeholder.py
tutorials/: index.html
